# irobot-controller

./: .gitignore  Cargo.toml  Makefile.toml  irobot.tree
e-puck/controllers/e-puck_line/: e-puck_line.c
e-puck/worlds/: .e-puck2_pi-puck.wbproj  .e-puck_botstudio_with_floor_sensors.wbproj  e-puck.wbt  e-puck2.wbt  e-puck2_pi-puck.wbt  e-puck2_server.wbt  e-puck_botstudio.wbt  e-puck_botstudio_with_floor_sensors.wbt  e-puck_cross-compilation.wbt  e-puck_kinematic.wbt  e-puck_line.wbt  e-puck_line_demo.wbt
irobot/create/worlds/: .create.wbproj  create.wbt
src/: actions.rs  epuck.rs  lib.rs  metrics.rs  robot.rs  routing.rs  tests.rs
src/control/: controller_impl.rs  linear_observation_model.rs  mod.rs  motion_model.rs
tree/: bb_load.json  epuck_go_to_goal.tree  epuck_line_follow.tree  route.yaml
tree/tests/: test_route.tree
